fixed examples for HTML_Progress 1.1; added setAnimSpeed() method.
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@152125 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/tutorials/HTML_Progress/ui.setcellattributes.cls
+++ b/tutorials/HTML_Progress/ui.setcellattributes.cls
@@ -91,6 +91,7 @@
 require_once ('HTML/Progress.php');
 
 $bar = new HTML_Progress();
+$bar->setAnimSpeed(100);
 $bar->setIncrement(10);
 $bar->setBorderPainted(true);
 
@@ -114,7 +115,7 @@ $ui->setStringAttributes('width=60 font-size=14 background-color=#EEEEEE align=c
 </style>
 <script type="text/javascript">
 <!--
-<?php echo $ui->getScript(); ?>
+<?php echo $bar->getScript(); ?>
 //-->
 </script>
 </head>
