--- a/tutorials/HTML_Progress/ui.setprogressattributes.cls
+++ b/tutorials/HTML_Progress/ui.setprogressattributes.cls
@@ -69,6 +69,7 @@
 require_once ('HTML/Progress.php');
 
 $bar = new HTML_Progress();
+$bar->setAnimSpeed(100);
 $bar->setIncrement(10);
 $bar->setBorderPainted(true);
 
@@ -103,7 +104,7 @@ $ui->setStringAttributes(array(
 </style>
 <script type="text/javascript">
 <!--
-<?php echo $ui->getScript(); ?>
+<?php echo $bar->getScript(); ?>
 //-->
 </script>
 </head>
