--- a/INSTALL
+++ b/INSTALL
@@ -7,10 +7,10 @@ HTML_Progress is very easy to install. If you are a PEAR user, use
 the common command line :
     pear install <package>
     
-Where <package> could ba something like 'HTML_Progress-1.0.tgz'
+Where <package> could be something like 'HTML_Progress-1.2.0.tgz'
 
 Pre-requires:
-You should have installed PEAR 1.2 or better on your php system.
+You should have installed PEAR 1.3.1 or better on your php system.
 For more informations, please visit Website of PEAR at http://pear.php.net
 If you're newbie, don't forget to read the FAQ at http://pear.php.net/manual/en/faq.php
 
