--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Installation
 
 Installation for HTML_Progress is as simple as any other PEAR classes.
 Just enter on command line:  pear install (tarball)
-where (tarball) is an archive file like  HTML_Progress-1.0.tgz
+where (tarball) is an archive file like  HTML_Progress-1.2.0.tgz
     
 If you need more detailed help, check out INSTALL
 
@@ -21,9 +21,9 @@ If you need more detailed help, check out INSTALL
 Release Notes
 ********************************************************************************
 
-Release notes for the newest version are in Release-1.0
+Release notes for the newest version are in Release-1.2.0RC2
 
-1.0 is out, a STABLE bugfix release
+1.2.0RC2 is out, a beta bugfix release
 
 To learn how to do, read online APIdoc and tutorials in many formats at 
 http://pear.laurent-laville.org/HTML/Progress/apidoc/
@@ -95,7 +95,7 @@ Project page: 	http://pear.laurent-laville.org/HTML/Progress
 Documentation:  http://pear.laurent-laville.org/HTML/Progress/apidoc/
 
 
-HTML_Progress 1.0 is released under the PHP License version 3.0, text is in
+HTML_Progress 1.2 is released under the PHP License version 3.0, text is in
 LICENSE file
 
 
@@ -143,7 +143,21 @@ Features since version 1.0
   - Look and feel can be sets by internal API or an external config file.
   - Allows many progress bar on same page without uses of iframe solution. 
 
+Features since version 1.1
+  - HTML_Progress_Generator replaced previous ProgressMaker
+  - Implements a file upload solution trough a ftp connection called HTML_Progress_Uploader
+
+Improvement since version 1.1
+  - HTML_Progress (Monitor, Generator, Uploader) support now the QF renderer system
   
+Features since version 1.2
+  - new shapes (square, rectangle, polygonal, circle, ellipse)
+
+Improvement since version 1.2
+  - Used now the NET_Ftp package rather than previous private solution
+  - Error_Raise was replaced by PEAR_ErrorStack, the new error manager included in PEAR 1.3.1
+
+
 If something is missing from this list make sure to file a feature request 
 at my mail address <pear@laurent-laville.org>
 
@@ -158,5 +172,6 @@ Thanks to Arnaud Limbourg to give me idea (Horz./Vert bars) to improve this pack
 Thanks to Greg Beaver for warning about Call-time pass-by-reference has been deprecated
 Thanks to Stefan Neufeind for his enhancement-proposal to keep compatibility with Opera6
 Thanks to Christian Wenz to help me to fix javascript errors on IE4 and NS4 browsers
+Thanks to Olivier Hondermarck to help me to fix a progress circle css problem (www.toutjavascript.com)
 
 Special Thanks to Rasmus Lerdorf, without him PHP and all this universe won't be! 
