add new private api since RC3
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@165648 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/HISTORY
+++ b/HISTORY
@@ -49,10 +49,12 @@ HTML_Progress
 1.2.0RC1 function _getProgressPolygonal_toHtml()
 1.2.0RC1 function _getProgressCircle_toHtml()
 1.2.0RC3 function _callbackExists($callback)
-1.2.0RC1 function _initErrorStack($prefs = array())
-1.2.0RC1 function _msgCallback(&$stack, $err)
-         function _getErrorMessage()
+1.2.0    function _initErrorHandler($prefs = array())
+1.2.0    function _msgCallback($err)
+1.2.0    function _getBacktrace()
 1.2.0RC2 function _handleError($err)
+1.2.0    function _errorHandler($err)
+         function _getErrorMessage()
 1.2.0RC1 function raiseError($code, $level, $params)
 1.2.0RC3 function hasErrors()
 1.2.0RC3 function getError()
