fix bug#2577 call-time by reference error
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@175082 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 $Id$
 
+-------------------------Release 1.2.1------------------------
+2004-12-19  Laurent Laville <pear@laurent-laville.org>
+    * fix bug#2577 Call time pass by reference error
+
 -------------------------Release 1.2.0------------------------
 2004-09-12  Laurent Laville <pear@laurent-laville.org>
     * The final and last stable version of branch 1 
