--- a/INSTALL
+++ b/INSTALL
@@ -6,8 +6,8 @@ HTML_Progress Installation instructions
 HTML_Progress is very easy to install. If you are a PEAR user, use
 the common command line :
     pear install <package>
-    
-Where <package> could be something like 'HTML_Progress-1.2.0.tgz'
+
+Where <package> could be something like 'HTML_Progress-1.2.2.tgz' or just 'HTML_Progress'
 
 Pre-requires:
 You should have installed PEAR 1.3.1 or better on your php system.
