online documentation links are changed (for future release 1.2.3)
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@194502 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Installation
 
 Installation for HTML_Progress is as simple as any other PEAR classes.
 Just enter on command line:  pear install (tarball)
-where (tarball) is an archive file like  HTML_Progress-1.2.2.tgz
+where (tarball) is an archive file like  HTML_Progress-1.2.3.tgz
 
 If you need more detailed help, check out INSTALL
 
@@ -21,12 +21,12 @@ If you need more detailed help, check out INSTALL
 Release Notes
 ********************************************************************************
 
-Release notes for the newest version are in Release-1.2.2
+Release notes for the newest version are in Release-1.2.3
 
-1.2.2 is out, a stable release
+1.2.3 is out, a stable and quality assurance release
 
-To learn how to do, read online APIdoc and tutorials in many formats at
-http://pear.laurent-laville.org/HTML_Progress/apidoc/
+To learn how to do, read online user-end documentation at URI
+http://pear.laurent-laville.org/HTML_Progress/docs/TDG/
 
 If you find a bug please send me a mail with subject HTML_Progress at:
 <pear@laurent-laville.org>
@@ -37,14 +37,14 @@ http://pear.php.net/bugs/search.php?cmd=display&status=Open&bug_type[]=HTML_Prog
 ********************************************************************************
 General Notes
 ********************************************************************************
-HTML_Progress is hosted at http://pear.laurent-laville.org, with downloads and
-online documentation
+HTML_Progress is hosted at http://pear.laurent-laville.org, with demos and
+online documentation.
 
-Project page:   http://pear.laurent-laville.org/HTML_Progress
-Documentation:  http://pear.laurent-laville.org/HTML_Progress/apidoc/
+Project page:            http://pear.laurent-laville.org/HTML_Progress
+API Documentation:       http://pear.laurent-laville.org/HTML_Progress/docs/API/
+User-end Documentation:  http://pear.laurent-laville.org/HTML_Progress/docs/TDG/
 
-
-HTML_Progress 1.2.2 is released under the PHP License version 3.0, text is in
+HTML_Progress 1.2.3 is released under the PHP License version 3.0, text is in
 LICENSE file
 
 
