prepare bug fixes release 1.2.4
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@196742 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 $Id$
 
+-------------------------Release 1.2.4------------------------
+2005-10-01  Laurent Laville <pear@laurent-laville.org>
+    * Quality-Assurance: updates headers comment blocks
+
+    * bugs fixes:
+      setBorderPainted(false) inefficient with setBorderAttributes()
+      and a positive width attribute value. Always show a border
+      arround the progress bar.
+
 -------------------------Release 1.2.3------------------------
 2005-08-28  Laurent Laville <pear@laurent-laville.org>
     Quality-Assurance:
